package utilitaire;

public enum Direction {
    HAUT, BAS, DROITE, GAUCHE
}
