@startuml classe

enum "Direction"{
    HAUT
    BAS
    DROITE
    GAUCHE
}

class "Application"{
    -clipboard : String
    -editeur : Editeur
    -fenetre : Fenetre
    -commandes : Map<Character, Callable<Commande>>

    +Application() <<constructor>>

    +getClipboard() : String
    +getEditeur() : Editeur
    +getFenetre() : Fenetre
    +getCommandes() : Map<Character, Callable<Commande>>
    +setClipboard(clipboard : String) : void

    +deplaceCurseur(direction : Direction) : void
    +deplaceSelection(direction : Direction) : void
    +ecrit(c : char) : void
    +supprime(direction : Direction) : void
    +getCommande(c : char) : Commande
    +run() : void
    -initCommandes() : void
}

class "Fenetre"{
    -application : Application
    -textArea : JTextArea
    -highlighter : Highlighter
    -selectionPainter : HighlightPainter
    -cursorPainter : HighlightPainter
    -selectionTag : Object
    -cursorTag : Object
    -actionneur : Actionneur

    +Fenetre(application : Application) <<constructor>>

    +getApplication() : Application
    +getTextArea() : JTextArea
    +getHighlighter() : Highlighter
    +getSelectionPainter() : HighlightPainter
    +getCursorPainter() : HighlightPainter
    +getSelectionTag() : Object
    +getCursorTag() : Object
    +getActionneur() : Actionneur
    +setActionneur(actionneur : Actionneur) : void

    +refreshText() : void
    +refreshSelectionHighlight() : void
    +refreshCursorHighlight() : void
    +show() : void
    -initTextArea() : void
}

abstract class "Actionneur"{
    #fenetre : Fenetre

    +Actionneur(fenetre : Fenetre) <<constructor>>

    +getFenetre() : Fenetre

    #changeActionneur(actionneur : Actionneur) : void
}

class "InputActionneur"{
    +InputActionneur(fenetre : Fenetre) <<constructor>>

    +keyPressed(e : KeyEvent) : void
    +keyTyped(e : KeyEvent) : void
    -isPrintableChar(c : char) : boolean
}

class "CommandeActionneur"{
    +CommandeActionneur(fenetre : Fenetre) <<constructor>>

    +keyPressed(e : KeyEvent) : void
    +keyReleased(e : KeyEvent) : void
}

class "Editeur"{
    -texte : StringBuffer
    -curseur : int
    -selection : Selection

    +Editeur() <<constructor>>

    +getTexte() : StringBuffer
    +getCurseur() : int
    +getSelection() : Selection

    +writeChar(c : char) : void
    +deleteChar(direction : Direction) : void
    +moveCurseur(direction : Direction) : void
    +moveSelection(direction : Direction) : void
    +resetSelection() : void
    +emptySelection() : boolean
    +getSelectedText() : String
    +setSelectedText(String remplacement) : void
    +removeSelectedText() : void
}

class "Selection"{
    -offset : int

    +Selection() <<constructor>>

    +getOffset() : int
    +setOffset(offset : int) : void
}

abstract class "Commande"{
    #application : Application
    #editeur : Editeur

    +Commande(application : Application, editeur : Editeur) <<constructor>>

    +getApplication() : Application
    +getEditeur() : Editeur

    {abstract}+execute() : void
}

class "Copier"{
    +Copier(application : Application, editeur : Editeur) <<constructor>>

    +execute() : void
}

class "Coller"{
    +Coller(application : Application, editeur : Editeur) <<constructor>>

    +execute() : void
}

class "Couper"{
    +Couper(application : Application, editeur : Editeur) <<constructor>>

    +execute() : void
}

class "DeplacerCurseur"{
    -direction : Direction

    +DeplacerCurseur(application : Application, editeur : Editeur, direction : Direction) <<constructor>>

    +getDirection() : Direction

    +execute() : void
}

class "DeplacerSelection"{
    -direction : Direction

    +DeplacerSelection(application : Application, editeur : Editeur, direction : Direction) <<constructor>>

    +getDirection() : Direction

    +execute() : void
}

class "Ecrire"{
    -c : char

    +Ecrire(application : Application, editeur : Editeur, c : char) <<constructor>>

    +getChar() : char

    +execute() : void
}

class "Supprimer"{
    -direction : Direction

    +Supprimer(application : Application, editeur : Editeur, direction : Direction) <<constructor>>

    +getDirection() : Direction

    +execute() : void
}

Application -->"1" Editeur
Application "1"--"1" Fenetre
Application "1"--"0..n" Commande : > créé des commandes
Fenetre "1"--"1" Actionneur
Editeur -->"1" Selection
Commande -->"1" Editeur

DeplacerCurseur -->"1" Direction
DeplacerSelection -->"1" Direction
Supprimer -->"1" Direction

InputActionneur -- Direction : > determine la direction de déplacement du curseur
CommandeActionneur -- Direction : > determine la direction de déplacement de la sélection

Commande <|-- Copier
Commande <|-- Couper
Commande <|-- Coller
Commande <|-- DeplacerCurseur
Commande <|-- DeplacerSelection
Commande <|-- Ecrire
Commande <|-- Supprimer

Actionneur <|-- InputActionneur
Actionneur <|-- CommandeActionneur
@enduml